name: obelisk-backend
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 bytestring,
                 categories,
                 data-default,
                 dependent-sum,
                 dependent-sum-template,
                 lens,
                 mtl,
                 obelisk-asset-serve-snap,
                 obelisk-executable-config-inject,
                 obelisk-frontend,
                 obelisk-route,
                 obelisk-snap-extras,
                 reflex-dom,
                 snap,
                 snap-core,
                 snap-server,
                 text,
                 universe
  exposed-modules: Obelisk.Backend
  ghc-options: -Wall
