name: obelisk-cliapp
version: 0.1
license: BSD3
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: src
  build-depends:
      aeson
    , ansi-terminal
    , base
    , bytestring
    , containers
    , exceptions
    , io-streams
    , lens
    , logging-effect
    , monad-loops
    , mtl
    , posix-escape
    , process
    , shell-escape
    , terminal-size
    , text
    , time
    , transformers
    , utf8-string
  exposed-modules:
    Obelisk.CliApp
  other-modules:
    Obelisk.CliApp.Logging
    Obelisk.CliApp.Process
    Obelisk.CliApp.Spinner
    Obelisk.CliApp.TerminalString
    Obelisk.CliApp.Theme
    Obelisk.CliApp.Types
  ghc-options: -Wall -fobject-code
