name: obelisk-command
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , ansi-terminal
    , Cabal
    , aeson-pretty
    , base
    , base16-bytestring
    , binary
    , bytestring
    , obelisk-cliapp
    , obelisk-migration
    , containers
    , data-default
    , directory
    , either
    , filepath
    , github
    , here
    , hit
    , hpack
    , io-streams
    , exceptions
    , logging-effect
    , lens
    , modern-uri
    , monad-loops
    , mtl
    , network
    , network-uri
    , optparse-applicative
    , placeholders
    , process
    , temporary
    , terminal-size
    , text
    , time
    , transformers
    , unix
    , yaml
  exposed-modules:
    Obelisk.App
    Obelisk.Command
    Obelisk.Command.Deploy
    Obelisk.Command.Nix
    Obelisk.Command.Project
    Obelisk.Command.Run
    Obelisk.Command.Thunk
    Obelisk.Command.Upgrade
    Obelisk.Command.Upgrade.Hash
    Obelisk.Command.Utils
    Obelisk.Command.VmBuilder
  -- -fobject-code is so that the StaticPointers extension can work in ghci
  ghc-options: -Wall -fobject-code

executable ob
  main-is: src-bin/ob.hs
  build-depends: base, obelisk-command
  ghc-options: -Wall -O2 -threaded
