name: obelisk-command
version: 0.8.0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , aeson-pretty
    , ansi-terminal
    , base
    , bytestring
    , Cabal
    , containers
    , data-default
    , directory
    , either
    , errors
    , exceptions
    , extra
    , filepath
    , git
    , github
    , here
    , hnix
    , hpack
    , io-streams
    , lens
    , logging-effect
    , megaparsec
    , modern-uri
    , monad-loops
    , monoidal-containers
    , mtl
    , network
    , network-uri
    , obelisk-cliapp
    , optparse-applicative
    , placeholders
    , process
    , temporary
    , terminal-size
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , which
    , yaml
  exposed-modules:
    Obelisk.App
    Obelisk.Command
    Obelisk.Command.Deploy
    Obelisk.Command.Nix
    Obelisk.Command.Project
    Obelisk.Command.Run
    Obelisk.Command.Thunk
    Obelisk.Command.Utils
    Obelisk.Command.VmBuilder
    Obelisk.Command.Preprocessor
  ghc-options: -Wall

executable ob
  main-is: src-bin/ob.hs
  build-depends: base, obelisk-command
  ghc-options: -Wall -O2 -threaded
