name: obelisk-command
version: 0.9.0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , ghcid
    , aeson-pretty
    , ansi-terminal
    , base
    , bytestring
    , Cabal
    , containers
    , data-default
    , directory
    , either
    , errors
    , exceptions
    , extra
    , filepath
    , fsnotify >= 0.4
    , git
    , github
    , here
    , hnix >=0.12.0 && <0.13.0
    , hpack >=0.34.4 && <0.35
    , io-streams
    , lens
    , logging-effect
    , megaparsec
    , modern-uri
    , monad-loops
    , monoidal-containers
    , mtl
    , network
    , network-uri
    , optparse-applicative
    , placeholders
    , prettyprinter
    , process
    , reflex
    , reflex-fsnotify
    , shell-escape
    , temporary
    , terminal-size
    , text
    , time
    , transformers
    , unix-compat
    , unordered-containers
    , utf8-string
    , which
    , yaml
    , nix-thunk
    , cli-extras
    
  exposed-modules:
    Obelisk.App
    Obelisk.Command
    Obelisk.Command.Deploy
    Obelisk.Command.Nix
    Obelisk.Command.Project
    Obelisk.Command.Run
    Obelisk.Command.Utils
    Obelisk.Command.VmBuilder
    Obelisk.Command.Preprocessor
  ghc-options: -Wall

executable ob
  main-is: src-bin/ob.hs
  build-depends: base, obelisk-command
  ghc-options: -Wall -Werror -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded
