name: obelisk-frontend
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 bytestring,
                 containers,
                 cookie,
                 dependent-sum,
                 ghcjs-dom,
                 jsaddle,
                 lens,
                 mtl,
                 obelisk-executable-config,
                 obelisk-executable-config-inject,
                 obelisk-route,
                 primitive,
                 ref-tf,
                 reflex,
                 reflex-dom-core,
                 text,
                 transformers
  exposed-modules:
    Obelisk.Frontend
    Obelisk.Frontend.Config
    Obelisk.Frontend.Cookie
  ghc-options: -Wall
