name: obelisk-request
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 aeson,
                 constraints,
                 template-haskell,
                 vector
  exposed-modules:
    Obelisk.Request
    Obelisk.Request.TH
  other-modules:
    Obelisk.Request.HList
  ghc-options: -Wall
