name: obelisk-request
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 aeson,
                 constraints,
                 constraints-extras,
                 dependent-sum,
                 template-haskell,
                 vector
  exposed-modules:
    Obelisk.Request
  other-modules:
    Obelisk.Request.HList
  ghc-options: -Wall
