name: obelisk-route
version: 0.2
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 aeson,
                 bytestring,
                 categories,
                 constraints,
                 constraints-extras,
                 containers,
                 dependent-map,
                 dependent-sum,
                 dependent-sum-template,
                 either,
                 ghcjs-dom,
                 http-types,
                 jsaddle,
                 lens,
                 mmorph,
                 monad-control,
                 mtl,
                 network-uri,
                 obelisk-executable-config-lookup,
                 primitive,
                 ref-tf,
                 reflex,
                 reflex-dom-core,
                 template-haskell,
                 tabulation,
                 text,
                 th-extras,
                 transformers,
                 universe,
                 universe-dependent-sum
  exposed-modules: Obelisk.Route
                   Obelisk.Route.TH
                   Obelisk.Route.Frontend
  ghc-options: -Wall -Werror -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O

test-suite route-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base
               , lens
               , text
               , tasty
               , tasty-quickcheck
               , obelisk-route
               , QuickCheck
