name: obelisk-run
version: 0.1
license: BSD3
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: src
  build-depends:
      attoparsec
    , base
    , bytestring
    , cookie
    , dependent-sum
    , dependent-sum-template
    , ghcjs-dom
    , http-client
    , http-reverse-proxy
    , http-types
    , jsaddle
    , jsaddle-warp
    , lens
    , modern-uri
    , mtl
    , network
    , obelisk-asset-serve-snap
    , obelisk-backend
    , obelisk-executable-config
    , obelisk-frontend
    , obelisk-route
    , process
    , ref-tf
    , reflex
    , reflex-dom
    , snap-core
    , streaming-commons
    , text
    , universe
    , wai
    , wai-websockets
    , warp
    , websockets
  exposed-modules:
      Obelisk.Run
  ghc-options: -Wall -fwarn-redundant-constraints
