name: obelisk-run
version: 0.1
license: BSD3
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: src
  build-depends:
      attoparsec
    , base
    , bytestring
    , containers
    , cookie
    , dependent-sum
    , dependent-sum-template
    , ghcjs-dom
    , HsOpenSSL
    , http-client
    , http-reverse-proxy
    , http-types
    , jsaddle
    , jsaddle-warp
    , lens
    , modern-uri
    , mtl
    , network
    , obelisk-asset-serve-snap
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-route
    , process
    , ref-tf
    , reflex
    , reflex-dom-core
    , snap-core
    , streaming-commons
    , text
    , time
    , universe
    , utf8-string
    , wai
    , wai-websockets
    , warp
    , warp-tls
    , websockets
  exposed-modules:
      Obelisk.Run
  ghc-options: -Wall -Werror -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O
  if os(linux)
    cpp-options: -DIPROUTE_SUPPORTED
    build-depends: which
