name: obelisk-selftest
version: 0.1
synopsis: Impure and nix-level tests for obelisk
license: BSD3
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  build-depends:
      base
    , containers
    , directory
    , filepath
    , hspec
    , http-client
    , http-types
    , HUnit
    , network
    , obelisk-executable-config-lookup
    , obelisk-run
    , which
    , process
    , shelly >= 1.9.0
    , temporary
    , text
  exposed-modules:
    Obelisk.SelfTest
  ghc-options: -Wall

executable obelisk-selftest
  main-is: src-bin/obelisk-selftest.hs
  build-depends: base, obelisk-selftest
  ghc-options: -Wall -O2 -threaded
