name: obelisk-selftest
version: 0.1
synopsis: Impure and nix-level tests for obelisk
license: BSD3
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  build-depends:
      base
    , bytestring
    , aeson
    , containers
    , directory
    , filepath
    , hspec
    , http-client
    , http-types
    , HUnit
    , network
    , obelisk-executable-config-lookup
    , obelisk-run
    , which
    , process == 1.6.13.2
    , shelly
    , temporary
    , text
  exposed-modules:
    Obelisk.SelfTest
  ghc-options: -Wall
  if arch(javascript)
    buildable: False

executable obelisk-selftest
  main-is: src-bin/obelisk-selftest.hs
  build-depends: base, obelisk-selftest
  ghc-options: -Wall -O2 -threaded
