Name: obelisk-snap
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: BSD3
Author: Obsidian Systems
Maintainer: maintainer@obsidian.systems
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends:
    base,
    bytestring,
    data-default,
    diagrams-lib,
    diagrams-svg,
    filepath,
    lens,
    monad-control,
    obelisk-asset-serve-snap,
    obelisk-snap-extras,
    semigroups,
    raw-strings-qq,
    reflex-dom,
    snap,
    snap-core,
    svg-builder,
    text,
    transformers-base

  exposed-modules:
    Obelisk.Snap

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
