name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , network-uri
               , text
               , universe
  exposed-modules:
    Common.Api
    Common.Route
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O
