cabal-version: 2.2
name: common
version: 0.1
build-type: Simple

common defaults
  default-language: Haskell2010
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

library
  import: defaults
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , text
  exposed-modules:
    Common.Api
    Common.Route
