cabal-version: 2.2
name: frontend
version: 0.1
build-type: Simple

common defaults
  default-language: Haskell2010
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

library
  import: defaults
  hs-source-dirs: src
  build-depends: base
               , common
               , jsaddle
               , lens
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex-dom-core
               , text
  exposed-modules:
    Frontend

executable frontend
  import: defaults
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
